change accaptance_status column of bookings to acceptance_status

--- a/test/fixtures/bookings.yml
+++ b/test/fixtures/bookings.yml
@@ -2,8 +2,8 @@
 
 one:
   passenger_id: 
-  accaptance_status: false
+  acceptance_status: false
 
 two:
   passenger_id: 
-  accaptance_status: false
+  acceptance_status: false
