update server ip in capify.rb deployment

--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -20,5 +20,5 @@ production:
   encoding: unicode
   database: shouter_production
   pool: 5
-  username: postgres
+  username: shouter
   password:
