add city, ulat and ulng fields to user and delete post_code and username

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
   pool: 5
   database: shouter
   username: postgres
-  password: 
+  password: hamid
   host: localhost
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
