--- a/config/database.yml
+++ b/config/database.yml
@@ -3,20 +3,20 @@ development:
   encoding: unicode
   pool: 5
   database: shouter
-  username: postgres
+  username: deploye
   password: hamid
   host: localhost
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  database: shouter_test
-  username: postgres
-  password: 
-  host: localhost
+# test:
+#   adapter: postgresql
+#   encoding: unicode
+#   pool: 5
+#   database: shouter_test
+#   username: postgres
+#   password: 
+#   host: localhost
 
 # production:
 #   adapter: postgresql
