add application yaml in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 /db/*.sqlite3
 /db/*.sqlite3-journal
 
-/config/application.yml
-/config/database.yml
+# /config/application.yml
+# /config/database.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
